# practice

python/katas/fuzzy-clock/: fuzzy_clock.py  fuzzy_clock_test.py  pyproject.toml
python/katas/fuzzy-clock/spec/: spec_helper.py
python/katas/fuzzy-clock/tests/: first_test.py  hello_world.py  test_fuzzy_clock.py
ruby/katas/lib/: fuzzy_clock.rb  methods.rb
ruby/katas/spec/: fuzzy_clock_spec.rb  methods_spec.rb
