[tool.poetry]
name = "fuzzy-clock"
version = "0.1.0"
description = ""
authors = ["Hector D. Felix <hdfelix@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
expects = "^0.9.0"
mamba = "^0.11.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
